--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@material-tailwind/react": "^2.1.5",
     "@reduxjs/toolkit": "^1.9.7",
     "@tanstack/react-query": "4",
     "@testing-library/jest-dom": "^5.17.0",
