--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 REACT_APP_SERVER = https://coursehub-production.vercel.app/api/v1
 REACT_APP_MIDTRANS_CLIENT_KEY = SB-Mid-client-fmGdyz30X8bTauA0
+REACT_APP_OAUTH_GOOGLE = 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
+REACT_APP_OAUTH_GOOGLE_ID = 762036659045-hq7idcmkmd0qvmlpcpaiticul3qupp04.apps.googleusercontent.com
