--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "final-project-k1": "file:",
     "flowbite": "^2.2.0",
     "flowbite-react": "^0.7.0",
     "framer-motion": "^10.16.5",
